<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wooden_shelf"

    tools:context="com.games.garrett.theliquorcabinet.activities.BrowseActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textColor="#f4d433"/>

        <EditText
            android:id="@+id/query_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/search_hint" />

    </LinearLayout>

    <LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:text="@string/sort_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#f4d433"
        android:layout_weight="30"/>

    <Spinner
        android:id="@+id/sort_by_spinner"
        android:hint="@string/sort_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/spinner_dropdown_background"
        android:layout_weight="60"/>
    <ToggleButton
        android:id="@+id/sort_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/ascending"
        android:textOff="@string/descending"
        android:layout_weight="10"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/from_store"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#f4d433"/>

        <Spinner
            android:id="@+id/from_location_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/spinner_dropdown_background">
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/prev_products_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/previous"
            android:gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.30"
            android:textColor="@color/gray"/>

        <Button
            android:id="@+id/search_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/search"
            android:layout_weight="0.33"
            android:textColor="#f4d433"/>


        <Button
            android:id="@+id/more_products_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/more"
            android:gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.30"
            android:textColor="#f4d433"/>


    </LinearLayout>


   <FrameLayout android:name="com.games.garrett.theliquorcabinet.fragments.DisplayProductsFragment"
       android:id="@+id/product_list_fragment"
       android:layout_height="match_parent"
       android:layout_width="match_parent">

   </FrameLayout>


</LinearLayout>
