...

    <string name="MESSENGER_KEY">MESSENGER_KEY</string>
    <string name="REQUEST_CODE">REQUEST_CODE</string>
    <string name="SERVICE_URL">SERVICE_URL</string>
    <string name="ITEM_ARRAY_KEY">ITEM_ARRAY_KEY</string>

    <string name="search">Search</string>
    <string name="search_hint">vodka</string>
    <string name="sort_by">Sort By</string>
    <string name ="sort_hint">price</string>
    <string name ="from_store">From</string>

    <string-array name="sort_by_choices">
...
